# stm32-cmake

./: CHANGELOG.md  README.md
.github/actions/getLatestTag/: action.yml
.github/workflows/: create-label.yml  create-matrix.yml  getLatestTagUnitTest.yml  maintenance.yml  tests.yml
cmake/: FindBSP.cmake  FindCMSIS.cmake  FindFreeRTOS.cmake  FindHAL.cmake
cmake/stm32/: c0.cmake  common.cmake  devices.cmake  f0.cmake  f1.cmake  f2.cmake  f3.cmake  f4.cmake  f7.cmake  g0.cmake  g4.cmake  h5.cmake  h7.cmake  l0.cmake  l1.cmake  l4.cmake  l5.cmake  linker_ld.cmake  mp1.cmake  mp2.cmake  n6.cmake  u0.cmake  u5.cmake  wb.cmake  wb0.cmake  wba.cmake  wl.cmake
tests/cmsis/: CMakeLists.txt
tests/fetch/: CMakeLists.txt
tests/freertos/: CMakeLists.txt  main.c  stm32mp2xx_hal_conf.h
tests/hal/: CMakeLists.txt
